frontend/src/app/app.component.css
.header {
  position: fixed;
  left: 0px;
  top: 0px;
  width: 100%;
}

.body {
  margin-top: 64px;
  height: calc(100vh - 64px);
}

.footer {
  position: fixed;
  left: 0px;
  bottom: 0px;
  height: 32px;
  width: 100%;
  background: #999;
}

.fill-remaining-space {
  /* This fills the remaining space, by using flexbox.
     Every toolbar row uses a flexbox row layout. */
  flex: 1 1 auto;
}

